# crowdmark-splitter-py

./: .gitignore  README.md  playground.ipynb  pyproject.toml  splitter.py
