[tool.poetry]
name = "crowdmark-splitter-py"
version = "0.1.0"
description = ""
authors = ["Robert <9291792+bushshrub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.16.3"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
